[package]
name = "zstd_util"
version = "0.1.4"
authors = ["Lukáš Tyrychtr <lukastyrychtr@gmail.com>"]
description = "A simple zstd_safe based compression and decompression wrapper"
license = "MIT"
repository = "https://github.com/tyrylu/zstd_util"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
zstd-safe = "7.0.0"
thiserror = "2.0.8"

[dev_dependencies]
env_logger = "0.8"
