[package]
name = "zstd_util"
version = "0.1.4"
authors = ["Lukáš Tyrychtr <lukastyrychtr@gmail.com>"]
description = "A simple zstd_safe based compression and decompression wrapper"
license = "MIT"
repository = "https://github.com/tyrylu/zstd_util"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.28"
zstd-safe = "7.2.4"
thiserror = "2.0.17"

[dev_dependencies]
env_logger = "0.8"
